--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@
   .navbar-brand
     = link_to root_path, class:"navbar-item" do
       %h1.title.is-5.has-text-white= Rails.configuration.application_name
-    #navbar.navbar-menu
+    #navbar-hoge
       .navbar-start
         - if subscribed?
           .navbar-item
@@ -14,6 +14,8 @@
           - if admin?
             = link_to '新規作成', new_book_path, class:'button is-dark'
           .field.is-grouped
+            %p.control
+              = link_to 'プラン', pricing_index_path, class: 'navbar-item button is-dark'
             - if user_signed_in?
               .navbar-item.has-dropdown.is-hoverable
                 = link_to 'ユーザー情報', edit_user_registration_path, class: "navbar-link"
@@ -25,8 +27,6 @@
                       %span.tag.is-warning 管理者
                   = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"navbar-item"
             - else
-              %p.control
-                = link_to '料金', pricing_index_path, class: 'navbar-item button is-dark'
               %p.control
                 = link_to "ログイン", new_user_session_path, class:"navbar-item button is-dark"
               %p.control
