nil参照の修正

--- a/app/views/admin/customers/show.html.haml
+++ b/app/views/admin/customers/show.html.haml
@@ -21,7 +21,7 @@
                 %p.subtitle
                 %div
                   %ul
-                    - @subscribed_items.each do |item|
+                    - Array(@subscribed_items).each do |item|
                       %li= "#{item.plan.nickname}（#{item.plan.amount}円/月）"
           - else
             .card.is-3
