プランをプロダクトから取得するように変更

--- a/app/views/pricing/index.html.haml
+++ b/app/views/pricing/index.html.haml
@@ -1,19 +1,20 @@
 %section.section
   .has-text-centered.box
-    %h1.title Pricing
+    %h1.title サブスクリプション
     %h2.subtitle
     .pricing-table
-      .pricing-plan.is-link.is-active
-        .plan-header= Stripe_plan_name
-        .plan-price
-          %span.plan-price-amount>
-            %span.plan-price-currency> ¥
-            300
-          \/月
-        .plan-items
-          .plan-item= "#{Stripe_plan_name} サービスが受けられます。"
-        .plan-footer
-          - if user_signed_in?
-            = link_to 'Subscribe', new_subscription_path(plan: Stripe_plan_name, plan_id: Stripe_plan_id), class:"button is-fullwidth"
-          - else
-            = link_to 'Subscribe', new_user_registration_path, class: 'button is-fullwidth'
+      - @plans.reverse_each do |plan|
+        .pricing-plan.is-link.is-active
+          .plan-header= plan.nickname
+          .plan-price
+            %span.plan-price-amount>
+              %span.plan-price-currency> ¥
+              = plan.amount
+            \/月
+          .plan-items
+            .plan-item= "３０日間無料"
+          .plan-footer
+            - if user_signed_in?
+              = link_to 'メンバーシップを開始', new_subscription_path(plan_nickname: plan.nickname, plan_id: plan.id), class:"button is-fullwidth"
+            - else
+              = link_to 'ログインして開始', new_user_session_path, class: 'button is-fullwidth'
